Toggle has replaced play and stop buttons. It is not yet functional as it's not connected to the autoRollCheck function. All dice control styles are ready(servicable) for production with the exception of a gap to the right of the toggle. The gap does not take priority over other work at the moment but may need to be handled later if there's time because it's killing my OCD.

--- a/styles/site.css
+++ b/styles/site.css
@@ -80,15 +80,10 @@ address {
 
 
 /* Controls */
-.controlBarLeft {
+.controlBarLeft {	
+	margin-top: 1em;
     float: left;
     position: fixed;    
-}
-
-#Play {
-	opacity: 0;
-	width: 0;
-	height: 0;
 }
 
 .slider {	
@@ -103,14 +98,22 @@ address {
   transition: .4s;
 }
 
-.sliderContainer {
-	
+/* Controls: Bootstrap */
+#dieToolbar > .btn {
+	border-radius: unset;
+}
+
+.btn-group-vertical > .btn-group:not(:first-child), .btn-group-vertical > .btn:not(:first-child) {
+    margin-top: 0px;
 }
 
 /* Controls: unused */
 .btn {}
 .controlBtn {}
+#Play {}
 #Stop {}
+.sliderContainer {}
+#dieToolbar {}
 
 
 /* Content */
@@ -118,7 +121,7 @@ address {
     margin: 4%;
     padding: 5%;
     border: slategrey solid thick;
-    border-radius: 12px;
+    /* border-radius: 12px; */
 }
 
 .dieHolder {
@@ -165,14 +168,16 @@ li > span.badge-pill {
 
 /* Content: unused */
 #originLI {}
-#dieToolbar {}
 
 
 /* Counter */
 #totalDiv {
-    width: auto;
-    margin-bottom: 15%;    
-    margin-left: 40%;
+    width: auto;      
+    display: flex;
+    flex-direction: column;
+	border: .3em solid rgba(255, 255, 255, .4);
+	border-radius: .2em;
+	opacity: .9;
 }
 
 #totalHeading {
@@ -180,6 +185,7 @@ li > span.badge-pill {
     color: #fff;
     margin-left: auto;
     margin-right: auto;
+	margin-top: .1em;
 }
 
 #totalSpan {
